--- a/mindmap/css/style.css
+++ b/mindmap/css/style.css
@@ -1,15 +1,48 @@
-*{
+* {
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "San Francisco", sans-serif;
     color: #333;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-#board{
+/** Regular */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
+
+/** Bold */ 
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 700;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
+}
+
+#board {
     background: #eee;
-    padding: 1rem;  
+    padding: 1rem;
 }
 
-#mind-master{
+#mind-master {
     background: lightskyblue;
     padding: 0.5rem;
 }
+
+.mind-node {
+    background: lightsteelblue;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 1px solid #d2d2d2;
+}
+form {
+    border: 5px solid #eeeeee;
+}
+
+
